<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffe5e5e5">
    
    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:layout_marginTop="15dp"
	            android:layout_marginBottom="10dp"
	            android:layout_weight="0" 
	            android:orientation="vertical"
	            android:background="#ffb2b2b2">
	            
	
	            <TextView
	                android:id="@+id/textView_nameinf"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/register_textViewContent_name"
	                android:textAppearance="?android:attr/textAppearanceLarge" />	
	            <TextView
	                android:id="@+id/textView_phone"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/register_textViewContent_phone"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/textView_driverlicense"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/textViewContent_driverlicense"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	            <TextView
	                android:id="@+id/textView_license"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/textViewContent_license"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	        </LinearLayout>
	        
	        <TextView
			    android:id="@+id/textView_copyright"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingLeft="30dp"
			    android:paddingRight="30dp"
	            android:layout_marginTop="15dp"
			    android:layout_gravity="center_horizontal"
			    android:text="@string/main_textViewContent_copyright"
			    android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>